# KIV-UPS

./: .gitignore
client/: build.gradle
client/src/main/java/cz/hartrik/puzzle/: Application.java  ApplicationBuilder.java  FrameController.java  FrameStage.java  Main.java  Strings.java
client/src/main/java/cz/hartrik/puzzle/app/: Application.java  ApplicationBuilder.java  Main.java  ModuleConsole.java
client/src/main/java/cz/hartrik/puzzle/module/: ApplicationModule.java  AutocompleteTextField.java  ModuleConsole.java
client/src/main/java/cz/hartrik/puzzle/net/: Connection.java  ConnectionHolder.java  ConnectionProvider.java  MessageConsumer.java  ReaderThread.java  WriterThread.java
client/src/main/java/cz/hartrik/puzzle/page/: CancelablePage.java  ErrorPage.java  JoinGamePage.java  LimitedTextField.java  LoadingPage.java  LogInPage.java  MenuPage.java  NameTextField.java  NewGamePage.java  Page.java  PageBase.java  WinPage.java
client/src/main/java/cz/hartrik/puzzle/service/: ExecutableService.java  Service.java  ServiceExtractor.java  (+1 more)
client/src/main/resources/: logging.properties
client/src/main/resources/cz/hartrik/puzzle/: Frame.fxml  style.css
doc/: kiv-ups-sp.tex  sequence-diagram.puml  state-diagram.puml
server/: CMakeLists.txt  run-clear.sh  run.sh
server/src/main/c/: buffer.c  buffer.h  controller.c  controller.h  game.c  game.h  game_pool.c  game_pool.h  main.c  message_buffer.c  message_buffer.h  protocol.h  server.c  server.h  session.c  session.h  session_pool.c  session_pool.h  shared.c  shared.h  stats.c  stats.h  utils.c  utils.h
(+27 files in other folders)
